--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.2.2",
+    "chart.js": "^4.4.7",
     "leaflet": "^1.9.4",
     "primevue": "^4.2.2",
     "vue": "^3.5.12",
