--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,7 @@ pytest = "^8.3.4"
 pytest-django = "^4.9.0"
 paramiko = "^3.5.0"
 termcolor = "^2.5.0"
+xlsxwriter = "^3.2.2"
 
 [build-system]
 requires = ["poetry-core"]
