Update minor stuff

--- a/backend/deployment/tsosi-app.nginx.config
+++ b/backend/deployment/tsosi-app.nginx.config
@@ -17,6 +17,17 @@ server {
 
   keepalive_timeout 5;
 
+  # Enable basic gzip compression
+  gzip on;
+  gzip_disable "msie6";
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_min_length 1000;
+  gzip_comp_level 6;
+  # gzip_buffers 16 8k;
+  # gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json text/xml text/javascript;
+
   # path for static files
   root /var/www/current/public;
 
