Many front stuff

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "files": [],
+  "compilerOptions": {
+    "lib": ["es2022"]
+  },
   "references": [
     {
       "path": "./tsconfig.node.json"
