--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "primevue": "^4.2.2",
     "vue": "^3.5.12",
+    "vue-matomo": "^4.2.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
