--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-VITE_API_ROOT=http://tsosi.u-ga.fr/api/
+VITE_API_ROOT=https://tsosi.org/api/
+VITE_MATOMO_HOST=https://matomo-gates.u-ga.fr/
+VITE_MATOMO_SITE_ID=7
