--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
 VITE_API_ROOT=https://tsosi.org/api/
 VITE_MATOMO_HOST=https://matomo-gates.u-ga.fr/
 VITE_MATOMO_SITE_ID=7
+VITE_WELCOME_POPUP=true
