--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,6 +40,7 @@ isort = "^5.13.2"
 # Tests
 pytest = "^8.3.4"
 pytest-django = "^4.9.0"
+factory-boy = "^3.3.3"
 # Deployment utilities
 scp = "^0.15.0"
 paramiko = "^3.5.0"
