--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,3 +2,4 @@ VITE_API_ROOT=https://tsosi.org/api/
 VITE_MATOMO_HOST=https://matomo-gates.u-ga.fr/
 VITE_MATOMO_SITE_ID=7
 VITE_WELCOME_POPUP=true
+VITE_INFRA_HISTOGRAM_OPT_OUT=doab_oapen
