--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "build-dev": "vite build --mode development"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
