--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -22,6 +22,9 @@ jobs:
   frontend-test:
     timeout-minutes: 10
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,4 +40,4 @@ jobs:
         run: npm ci
       
       - name: Build app
-        run: npm buid
+        run: npm run build
