--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
         5173    // Vue.js default dev server 
     ],
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "root",
+	// "remoteUser": "root",
     // Use 'postCreateCommand' to run commands after the container is created.
     // It's executed within the above `workspaceFolder`
     // We execute init scripts (basically deps installation)
