--- a/.github/workflows/backend-test.yaml
+++ b/.github/workflows/backend-test.yaml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+    - 'backend/**'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'backend/**'
+
     
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
