--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'frontend/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
