Update backend test container so that no credentials are required to access it

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,12 +3,26 @@
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
     "workspaceFolder": "/workspaces/tsosi-app/",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                // Python extensions
+                "ms-python.python",
+                "ms-python.black-formatter",
+                "ms-python.isort",
+                "ms-toolsai.jupyter",
+                // Front-end extensions
+                "vue.volar",
+                "esbenp.prettier-vscode",
+                "dbaeumer.vscode-eslint",
+                "vitest.explorer"
+            ]
+        }
+    },
     "forwardPorts": [
         8000,   // Django default dev server
         5173    // Vue.js default dev server 
     ],
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root",
     // Use 'postCreateCommand' to run commands after the container is created.
     // It's executed within the above `workspaceFolder`
     // We execute init scripts (basically deps installation)
