--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,18 +17,12 @@ services:
   db:
     image: postgres:17
     restart: always
-    # TODO?: use a bind mount with host folder to access database easily ?
-    # volumes:
-    #   - type: bind
-    #     source: /tsosi-postgresql
-    #     target: /var/lib/postgresql/data
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file: "postgres.env"
     ports:
-      - "5433:5432" # We don't use 5432 bc it might already be used by host 
+      - "5433:5432" # We don't use 5432 bc it might already be used by host's postgres, if any
 
-  # TODO
   redis:
     image: redis:8
     restart: unless-stopped
