Rework Frontend-app identification in API throttling - Use custom HTTP header X-Frontend-Origin

--- a/frontend/.env.development.example
+++ b/frontend/.env.development.example
@@ -1,4 +1,6 @@
 VITE_API_ROOT=http://127.0.0.1:8000/api/
+VITE_CUSTOM_HTTP_HEADER=X-Frontend-Origin
+VITE_CUSTOM_HTTP_HEADER_VALUE=tsosi-app
 # VITE_MATOMO_HOST=http://127.0.0.1:8080/
 # VITE_MATOMO_SITE_ID=1
 # VITE_WELCOME_POPUP=true
