--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,3 +3,6 @@ VITE_MATOMO_HOST=https://matomo-gates.u-ga.fr/
 VITE_MATOMO_SITE_ID=7
 # VITE_WELCOME_POPUP=true
 VITE_INFRA_HISTOGRAM_OPT_OUT=doab_oapen
+# This must be synced with the backend app
+VITE_CUSTOM_HTTP_HEADER=X-Frontend-Origin
+VITE_CUSTOM_HTTP_HEADER_VALUE=tsosi-app
