--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,9 @@
         "vue.volar",
         "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
-        "vitest.explorer"
+        "vitest.explorer",
+
+        // Markdown extension
+        "bierner.markdown-mermaid"
     ]
 }
