--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.14.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^9.30.0",
     "geojson": "^0.5.0",
     "jsdom": "^25.0.1",
