--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -49,6 +49,7 @@ paramiko = "^3.5.0"
 termcolor = "^2.5.0"
 xlsxwriter = "^3.2.2"
 pydot = "^4.0.1" # Used to generate database graph with django_extensions command `graph_models`. It requires graphviz package
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -63,3 +64,6 @@ python_files = [
   "test_*.py",
   "tests_*.py"
 ]
+
+[tool.coverage.run]
+omit = ["**/tests/*", "tests/**", "**/__init__.py", "tsosi/data/preparation/**"]
