Mock all calls to ROR and Wikimedia APIs except one

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -50,6 +50,7 @@ termcolor = "^2.5.0"
 xlsxwriter = "^3.2.2"
 pydot = "^4.0.1" # Used to generate database graph with django_extensions command `graph_models`. It requires graphviz package
 pytest-cov = "^6.2.1"
+pytest-mock = "^3.14.1"
 
 [build-system]
 requires = ["poetry-core"]
