--- a/frontend/.env.development.example
+++ b/frontend/.env.development.example
@@ -4,3 +4,5 @@ VITE_CUSTOM_HTTP_HEADER_VALUE=tsosi-app
 # VITE_MATOMO_HOST=http://127.0.0.1:8080/
 # VITE_MATOMO_SITE_ID=1
 # VITE_WELCOME_POPUP=true
+VITE_NEWSLETTERS_URL=https://api.github.com/repos/tsosi-org/newsletter/contents/
+VITE_NEWSLETTERS_SUBSCRIPTION_URL=https://cloud.univ-grenoble-alpes.fr/apps/forms/embed/sanHSpzrJHqPbCknYcCBDcWy
