--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -6,3 +6,5 @@ VITE_INFRA_HISTOGRAM_OPT_OUT=01q0bmy69
 # This must be synced with the backend app
 VITE_CUSTOM_HTTP_HEADER=X-Frontend-Origin
 VITE_CUSTOM_HTTP_HEADER_VALUE=tsosi-app
+VITE_NEWSLETTERS_URL=https://api.github.com/repos/tsosi-org/newsletter/contents/
+VITE_NEWSLETTERS_SUBSCRIPTION_URL=https://cloud.univ-grenoble-alpes.fr/apps/forms/embed/sanHSpzrJHqPbCknYcCBDcWy
