--- a/backend/deployment/tsosi-app.nginx.config
+++ b/backend/deployment/tsosi-app.nginx.config
@@ -67,7 +67,7 @@ server {
 
   location / {
     root /var/www/current/public;
-    try_files $uri $uri/ /index.html;
+    try_files $uri /index.html;
   }
     
   location /static/ {
